Added Docs and nav links
