# src/main.ts
@@ -3,9 +3,9 @@ import express from 'express';
 import cors from 'cors';
 import openAi from './routes/openAi';
 import * as path from 'path';
-/*import apiDoc from './routes/apiDoc';
+import apiDoc from './routes/apiDoc';
 import swaggerUi from 'swagger-ui-express';
-import swaggerDocument from '../api-doc/openapi.json';*/
+import swaggerDocument from '../api-doc/openapi.json';
 
 const app: express.Application = express();
 
@@ -14,10 +14,10 @@ app.use(express.json());
 
 const apiRouter: express.Router = express.Router();
 apiRouter.use('/openai', openAi);
+apiRouter.use('/doc', apiDoc);
 
 app.use('/api', apiRouter);
-/*app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument, { explorer: false }));
-app.use('/doc', apiDoc);*/
+app.use('/swagger', swaggerUi.serve, swaggerUi.setup(swaggerDocument, { explorer: false }));
 
 app.use(express.static(path.join(__dirname, 'static')));
 
